# Project-Alpha

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/alpha/core/: config.py  exceptions.py
tests/: test_core_config.py
